--- a/final.ipynb
+++ b/final.ipynb
@@ -46,3 +46,46 @@ def run_trainer_pipeline():
     val_encodings = tokenizer(
         X_val, truncation=True, padding='max_length', max_length=MAX_LEN, return_tensors='pt'
     )
+
+#8
+
+def generate_submission(trainer, mlb, test_path, tokenizer, output_filename='submission_deberta_trainer.csv'):
+    """Generates the final submission file using the Hugging Face Trainer."""
+
+    df_test = load_data(test_path, is_training=False)
+
+    X_test = df_test['input_text'].tolist()
+    test_encodings = tokenizer(
+        X_test, truncation=True, padding='max_length', max_length=MAX_LEN, return_tensors='pt'
+    )
+    test_dataset = MisconceptionDataset(test_encodings)
+
+    # Predict logits using the best model loaded by the Trainer
+    raw_predictions = trainer.predict(test_dataset).predictions
+
+    # Convert logits to probabilities
+    probabilities = torch.sigmoid(torch.tensor(raw_predictions)).numpy()
+
+    # Get indices of top 3 probability predictions
+    # argsort[::-1] gives descending indices, [:3] takes the top 3
+    top_3_indices = np.argsort(probabilities, axis=1)[:, ::-1][:, :3]
+
+    predictions = []
+
+    # Map the indices back to the actual class names (Category:Misconception)
+    for row in top_3_indices:
+        labels = [mlb.classes_[i] for i in row]
+        predictions.append(' '.join(labels))
+
+    # Create the submission DataFrame
+    submission_df = pd.DataFrame({
+        'row_id': df_test['row_id'],
+        'Category:Misconception': predictions
+    })
+
+    submission_df.to_csv(output_filename, index=False)
+    print(f"Submission file saved successfully to {output_filename}")
+
+
+if __name__ == "__main__":
+    run_trainer_pipeline()
