Implement MisconceptionDataset class
Added a custom dataset class for use with PyTorch and Hugging Face Trainer.

--- a/final.ipynb
+++ b/final.ipynb
@@ -14,11 +14,6 @@ from sklearn.metrics import average_precision_score # For standard AP score
 
 
 
-
-
-
-
-
 ###6
 # --- 3. Pipeline Execution ---
 
@@ -89,3 +84,24 @@ def generate_submission(trainer, mlb, test_path, tokenizer, output_filename='sub
 
 if __name__ == "__main__":
     run_trainer_pipeline()
+
+
+# --- 2. Custom Dataset and Model Utils ---
+
+class MisconceptionDataset(Dataset):
+    """PyTorch Dataset compatible with Hugging Face Trainer."""
+    def _init_(self, encodings, labels=None):
+        self.encodings = encodings
+        self.labels = labels
+
+    def _getitem_(self, idx):
+        item = {key: val[idx].clone().detach() for key, val in self.encodings.items()}
+        
+        if self.labels is not None:
+            # Use float for BCEWithLogitsLoss
+            item['labels'] = torch.tensor(self.labels[idx], dtype=torch.float)
+            
+        return item
+
+    def _len_(self):
+        return len(self.encodings['input_ids'])
