Data Preparation and Feature Engineering

--- a/final.ipynb
+++ b/final.ipynb
@@ -105,3 +105,55 @@ class MisconceptionDataset(Dataset):
 
     def _len_(self):
         return len(self.encodings['input_ids'])
+
+3.
+# --- 1. Data Preparation and Feature Engineering ---
+
+def clean_text(text):
+    """Basic text cleaning: lowercase and remove non-alphanumeric characters."""
+    if isinstance(text, str):
+        # Decode common LaTeX/unicode, clean, and strip excess whitespace
+        text = text.lower()
+        text = re.sub(r'\s+', ' ', text).strip()
+        return text
+    return ""
+
+def format_input(row):
+    """
+    Combines all relevant context into a single input string for the model.
+    This mimics the successful strategy of providing full context.
+    """
+    # Using a clear separator for the model
+    return (
+        f"Question: {clean_text(row['QuestionText'])} \n"
+        f"Answer: {clean_text(row['MC_Answer'])} \n"
+        f"Explanation: {clean_text(row['StudentExplanation'])}"
+    )
+
+def load_data(path, is_training=True):
+    """Loads and prepares data, including feature engineering."""
+    try:
+        df = pd.read_csv(path)
+    except FileNotFoundError:
+        print(f"Error: File not found at {path}")
+        return None
+
+    # Rename columns for consistency
+    df.rename(columns={'StudentExplanation': 'StudentExplanation', 
+                      'Misconception': 'misconception_name'}, inplace=True)
+    
+    # Generate the rich input feature
+    df['input_text'] = df.apply(format_input, axis=1)
+    
+    if is_training:
+        # Create the combined target label
+        df['target_label'] = df['Category'].astype(str) + ':' + df['misconception_name'].fillna('NA').astype(str)
+        # Group to get a list of all targets per student response (Multi-Label)
+        df_responses = df.groupby('row_id')['target_label'].apply(list).reset_index(name='labels')
+        
+        # Merge back the unique input text for each row_id
+        df_responses = df_responses.merge(df[['row_id', 'input_text']].drop_duplicates(subset=['row_id']), on='row_id')
+        
+        return df_responses
+    
+    return df
